<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluemarin"
    tools:context=".presentation.register.RegisterFragment"
    tools:ignore="ContentDescription, RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleRegisterTv"
            style="@style/Heading1White"
            android:layout_marginTop="60dp"
            android:text="@string/prompt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionRegisterTv"
            style="@style/Heading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/title_sign_login_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleRegisterTv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegisterTil"
            style="@style/MyFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_email"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:endIconTint="@color/yellow"
            app:errorEnabled="true"
            app:errorTextColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionRegisterTv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEt"
                style="@style/Heading4"
                android:background="@color/transparent"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:paddingStart="0dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameRegisterTil"
            style="@style/MyFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_username"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:endIconTint="@color/yellow"
            app:errorEnabled="true"
            app:errorTextColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailRegisterTil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameRegisterEt"
                style="@style/Heading4"
                android:background="@color/transparent"
                android:backgroundTint="@color/white"
                android:digits="@string/only_letters_and_numbers"
                android:inputType="textEmailAddress"
                android:paddingStart="0dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegisterTil"
            style="@style/MyFilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"
            app:boxStrokeColor="@color/white"
            app:endIconCheckable="true"
            app:errorEnabled="true"
            app:errorTextColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameRegisterTil"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEt"
                style="@style/Heading4"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordInfoTv"
            style="@style/SmallText"
            android:text="@string/password_info"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordRegisterTil" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            style="@style/selectableStatusEnableBtn"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:enabled="false"
            android:text="@string/get_started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInfoTv" />

        <TextView
            android:id="@+id/loginHereTv"
            style="@style/SmallText"
            android:layout_marginStart="49dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="49dp"
            android:text="@string/log_in_here"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
