<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluemarin"
    tools:context=".presentation.LoginFragment"
    tools:ignore="ContentDescription, RtlSymmetry">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle_top_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_rectangle_bottom_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleLoginTv"
        style="@style/Heading1White"
        android:layout_marginTop="80dp"
        android:text="@string/prompt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionLoginTv"
        style="@style/Heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_enter_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLoginTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLoginTil"
        style="@style/MyFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/yellow"
        app:errorEnabled="true"
        app:errorTextColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionLoginTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLoginEt"
            style="@style/Heading4"
            android:background="@color/transparent"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLoginTil"
        style="@style/MyFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        app:boxStrokeColor="@color/white"
        app:endIconCheckable="true"
        app:errorEnabled="true"
        app:errorTextColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLoginTil"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLoginEt"
            style="@style/Heading4"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/selectableStatusEnableBtn"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTil" />

    <TextView
        android:id="@+id/startHereTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="43dp"
        android:fontFamily="@font/baijamjuree"
        android:text="@string/dont_have_account"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/forgotPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="43dp"
        android:fontFamily="@font/baijamjuree"
        android:text="@string/dont_have_account1"
        android:textColor="@color/blue_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startHereTv" />

</androidx.constraintlayout.widget.ConstraintLayout>