<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluemarin"
    tools:context=".presentation.forgotpassword.ForgotPasswordFragment"
    tools:ignore="ContentDescription, RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/returnToLoginIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_arrow_return_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleForgotPasswordTv"
        style="@style/Heading1White"
        android:layout_marginTop="60dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionForgotPasswordTv"
        style="@style/Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/description_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleForgotPasswordTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailForgotPasswordTil"
        style="@style/MyFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        app:boxStrokeColor="@color/white"

        app:endIconMode="clear_text"
        app:endIconTint="@color/yellow"
        app:errorEnabled="true"
        app:errorTextColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionForgotPasswordTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailForgotPasswordEt"
            style="@style/Heading4"
            android:background="@color/transparent"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordButton"
        style="@style/selectableStatusEnableBtn"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/reset_password_text"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotPasswordTil" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>